@@ -78,7 +78,7 @@ public class WorkspacesClientIT {
     }
 
     public @Test void testCRUD() {
-        String name = String.format("%s-%d", testName.getMethodName(), rnd.nextInt((int) 1e6));
+        String name = "%s-%d".formatted(testName.getMethodName(), rnd.nextInt((int) 1e6));
         testCRUD(name);
     }
 
